; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_dev.c_netdev_lower_dev_get_private.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_dev.c_netdev_lower_dev_get_private.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.netdev_adjacent = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @netdev_lower_dev_get_private(%struct.net_device* %0, %struct.net_device* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca %struct.netdev_adjacent*, align 8
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store %struct.net_device* %1, %struct.net_device** %5, align 8
  %7 = load %struct.net_device*, %struct.net_device** %5, align 8
  %8 = icmp ne %struct.net_device* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  store i8* null, i8** %3, align 8
  br label %23

10:                                               ; preds = %2
  %11 = load %struct.net_device*, %struct.net_device** %5, align 8
  %12 = load %struct.net_device*, %struct.net_device** %4, align 8
  %13 = getelementptr inbounds %struct.net_device, %struct.net_device* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = call %struct.netdev_adjacent* @__netdev_find_adj(%struct.net_device* %11, i32* %14)
  store %struct.netdev_adjacent* %15, %struct.netdev_adjacent** %6, align 8
  %16 = load %struct.netdev_adjacent*, %struct.netdev_adjacent** %6, align 8
  %17 = icmp ne %struct.netdev_adjacent* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %10
  store i8* null, i8** %3, align 8
  br label %23

19:                                               ; preds = %10
  %20 = load %struct.netdev_adjacent*, %struct.netdev_adjacent** %6, align 8
  %21 = getelementptr inbounds %struct.netdev_adjacent, %struct.netdev_adjacent* %20, i32 0, i32 0
  %22 = load i8*, i8** %21, align 8
  store i8* %22, i8** %3, align 8
  br label %23

23:                                               ; preds = %19, %18, %9
  %24 = load i8*, i8** %3, align 8
  ret i8* %24
}

declare dso_local %struct.netdev_adjacent* @__netdev_find_adj(%struct.net_device*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
